<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.dreamtheaterquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/question_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/question_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_text" />

                <EditText
                    android:id="@+id/name"
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/intro_hint"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:maxLength="15"/>


            </LinearLayout>
            <LinearLayout
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/question_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/question_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_text" />

                <ImageView
                    style="@style/question_image"
                    android:contentDescription="@string/question_1_image_description"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/images_and_words" />

                <RadioGroup
                    style="@style/answer_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_radio_1" />

                    <RadioButton
                        android:id="@+id/q1answer"
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_radio_2" />

                    <RadioButton
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_radio_3" />

                    <RadioButton
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_1_radio_4" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/question_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/question_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_text" />

                <ImageView
                    style="@style/question_image"
                    android:contentDescription="@string/question_2_image_description"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/derek_sherinian" />

                <LinearLayout
                    style="@style/answer_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q2answer1"
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2_checkbox_1" />

                    <CheckBox
                        android:id="@+id/q2answer2"
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2_checkbox_2" />

                    <CheckBox
                        android:id="@+id/q2answer3"
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2_checkbox_3" />

                    <CheckBox
                        android:id="@+id/q2answer4"
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_2_checkbox_4" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/question_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/question_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3_text" />

                <EditText
                    android:id="@+id/q3answer"
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_3_hint"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:maxLength="10"/>
            </LinearLayout>
            <LinearLayout
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/question_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/question_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_text" />

                <ImageView
                    style="@style/question_image"
                    android:contentDescription="@string/question_4_image_description"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/john_petrucci" />

                <RadioGroup
                    style="@style/answer_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_radio_1" />

                    <RadioButton
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_radio_2" />

                    <RadioButton
                        android:id="@+id/q4answer"
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_radio_3" />

                    <RadioButton
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_4_radio_4" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/question_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/question_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5_text" />

                <ImageView
                    style="@style/question_image"
                    android:contentDescription="@string/question_5_image_description"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/metropolis" />

                <LinearLayout
                    style="@style/answer_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q5answer1"
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_5_checkbox_1" />

                    <CheckBox
                        android:id="@+id/q5answer2"
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_5_checkbox_2" />

                    <CheckBox
                        android:id="@+id/q5answer3"
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_5_checkbox_3" />

                    <CheckBox
                        android:id="@+id/q5answer4"
                        style="@style/answer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_5_checkbox_4" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/question_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_6"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/question_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_6_text" />

                <EditText
                    android:id="@+id/q6answer"
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_6_hint"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:maxLength="4"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button"/>
        <LinearLayout
            style="@style/card"
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <TextView
                style="@style/result_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_label"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/result_score"
                style="@style/result_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score" />

            <TextView
                android:id="@+id/result_text"
                style="@style/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_score" />

            <ImageView
                style="@style/question_image"
                android:contentDescription="@string/question_5_image_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:src="@drawable/dream_theater" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
